<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.ntut.user.myhw3.MainActivity">

    <TextView
        android:id="@+id/txtSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radGrpSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radBtnSexMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/sex_male" />

        <RadioButton
            android:id="@+id/radBtnSexFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex_female" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spnAgeRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/maleAgeRange"
        android:prompt="@string/spn_age_list_promt" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chkBoxMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music" />

            <CheckBox
                android:id="@+id/chkBoxSing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sing" />

            <CheckBox
                android:id="@+id/chkBoxDance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dance" />

            <CheckBox
                android:id="@+id/chkBoxTravel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel" />

            <CheckBox
                android:id="@+id/chkBoxReading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reading" />

            <CheckBox
                android:id="@+id/chkBoxWriting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writing" />

            <CheckBox
                android:id="@+id/chkBoxClimbing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/climbing" />

            <CheckBox
                android:id="@+id/chkBoxSwim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swim" />

            <CheckBox
                android:id="@+id/chkBoxEating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eating" />

            <CheckBox
                android:id="@+id/chkBoxDrawing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawing" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnOK"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtSug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggestion"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/txtHobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textSize="18sp" />
</LinearLayout>
